# llm_journal

./: .gitignore  Cargo.toml  config.toml.example  example_tokens.json  prompts.example.json  prompts.json  test_enrichment.rs  test_personalization.rs  test_temporal.rs
src/: auth.rs  config.rs  cycle_date.rs  file_manager.rs  handlers.rs  journal.rs  journal_processor.rs  llm_worker.rs  main.rs  personalization.rs  prompt_generator.rs  prompts.rs
templates/: base.html  home.html  journal.html
