[package]
name = "llm_journal"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1.0", features = ["full", "signal"] }
tokio-stream = "0.1"
tokio-util = "0.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Utilities
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
lazy_static = "1.4"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Security and authentication
axum-server = { version = "0.6", features = ["tls-rustls"] }
rand = "0.8"
hex = "0.4"
askama = "0.14"

# LLM Integration via Ollama (headless, supports AMD GPU)
ollama-rs = "0.3.2"
tokio-cron-scheduler = "0.14.0"

[dev-dependencies]
tempfile = "3.21.0"
# Background scheduling - temporarily disabled for initial version
# tokio-cron-scheduler = "0.10"
